Archive2/2d/7ccf99e0ca5d1b/output
main.cpp:14:12: error: expected a class or namespace
    friend Type ::myFunction();
           ^
main.cpp:25:7: error: 'bar' is a private member of 'foo::Foo'
    a.bar();
      ^
main.cpp:17:10: note: declared private here
    void bar() {}
         ^
2 errors generated.
